@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Werewolf 1.04: Added village drunks and fixed other issues.
     * Werewolf: Fixed various annoyances. Also raised chance of gun hitting.
     * Werewolf: Fixed a nasty lynch nick exploit.
     * Fixed an issue in HELP.
